feat. 服务管理-查询服务详情接口
